# video-pipeline

./: CMakeLists.txt  README.md
src/: main.cpp
